[fix] mooc_1201 alignment of items in cards

--- a/lms/static/sass/course-list.scss
+++ b/lms/static/sass/course-list.scss
@@ -11109,7 +11109,7 @@ article .display-3 {
 
   .course-meta {
     margin: 0;
-    min-height: auto;
+    min-height: 2.844rem;
   }
 }
 
@@ -13563,4 +13563,8 @@ span.complete-checkmark.fa.fa-check {
   #header-course {
     margin-top: 0;
   }
+}
+
+.course-cert {
+  min-height: 2.844rem;
 }
